feat: svg filter with text

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="./style.css" />
     <title>CANVAS</title>
   </head>
-  <body>
+  <body id="body">
     <h1>Graphic Playground</h1>
     <a href="/src/pages/snow-particles/index.html">1. snow particles</a>
+    <a href="/src/pages/text-stroke/index.html">2. text-stroke</a>
   </body>
 </html>
